   [issues #415, #2657, PR #2658]
   * Updated documentation, end-user clients (CGI, NUT-Monitor UI);
   * Updated `upsmon` client with ability to report entering and exiting
     the ALARM status if reported by the driver;
   * Updated `upsmon` client with setting to toggle whether an `ALARM`
     status can prompt the UPS to become critical in certain situations.

 - New `libupsclient` API methods added:
   * `upscli_str_add_unique_token()` and `upscli_str_contains_token()`,
     to help C NUT clients process `ups.status` and similarly structured
     strings same way as NUT core code base. [#2852, #2859]
   * `upscli_connect()` was previously always blocking; now this is sort of
     optional, with new `upscli_set_default_connect_timeout()` able to change
     the implicit timeout from default zero (meaning blocking) to a positive
     value (or back to 0). Several NUT clients (`upsc`, `upscmd`, `upsrw`,
     `upslog`, `upsmon`, `upsimage`, `upsset` and `upsstats`) were updated
     to default with a 10-second timeout in case of name resolution lags or
     unresponsive hosts (notably a problem with `upsmon` contacting many
     remote systems at once). The `NUT_DEFAULT_CONNECT_TIMEOUT` environment
     variable can be used to modify this timeout for all clients. Further
     new methods here include `upscli_get_default_connect_timeout()` to
     retrieve a copy of the last stored timeout, and
     `upscli_init_default_connect_timeout()` to initialize the value from
     a number of sources with different priorities. [#2847]
   * Symbols exported from `libupsclient` now include `nut_debug_level*` so
     that NUT clients can be usefully debugged (e.g. using `NUT_DEBUG_LEVEL`
     environment variable). [#2847]

 - Several NUT clients including `upscmd`, `upsrw`, `upsimage`, `upsset`,
   `upsstats`, and `upslog` (during reconnection), did not `UPSCLI_CONN_TRYSSL`
   so went plaintext even when secure connections were possible. Fixed to at