@@ -408,6 +408,12 @@ const NotifyFlagsStrings::TypeStrings NotifyFlagsStrings::type_str = {
 	"NOTECO",	// NOTIFY_NOTECO
 	"ALARM",	// NOTIFY_ALARM
 	"NOTALARM",	// NOTIFY_NOTALARM
+	"OVER",		// NOTIFY_OVER
+	"NOTOVER",	// NOTIFY_NOTOVER
+	"TRIM",		// NOTIFY_TRIM
+	"NOTTRIM",	// NOTIFY_NOTTRIM
+	"BOOST",	// NOTIFY_BOOST
+	"NOTBOOST",	// NOTIFY_NOTBOOST
 	"OTHER",	// NOTIFY_OTHER
 	"NOTOTHER",	// NOTIFY_NOTOTHER
 	"SUSPEND_STARTING",	// NOTIFY_SUSPEND_STARTING
