@@ -119,6 +119,12 @@ Sets/adds notification flags for the notification type.
 - 'NOTBYPASS' (no longer on bypass)
 - 'ALARM' (UPS is in an alarm state (has active alarms))
 - 'NOTALARM' (UPS is no longer in an alarm state (no active alarms))
+- 'OVER' (overloaded)
+- 'NOTOVER' (no longer overloaded)
+- 'TRIM' (trimming incoming voltage)
+- 'NOTTRIM' (no longer trimming incoming voltage)
+- 'BOOST' (boosting incoming voltage)
+- 'NOTBOOST' (no longer boosting incoming voltage)
 - 'OTHER' (UPS has at least one unclassified status token)
 - 'NOTOTHER' (UPS has no unclassified status tokens anymore)
 - 'SUSPEND_STARTING' (OS is entering sleep/suspend/hibernate mode)
