@@ -1,4 +1,4 @@
-personal_ws-1.1 en 3449 utf-8
+personal_ws-1.1 en 3452 utf-8
 AAC
 AAS
 ABI
@@ -776,6 +776,7 @@ NONUT
 NOP
 NOPARENT
 NOTALARM
+NOTBOOST
 NOTBYPASS
 NOTCAL
 NOTECO
@@ -785,6 +786,8 @@ NOTIFYFLAGS
 NOTIFYMSG
 NOTOFF
 NOTOTHER
+NOTOVER
+NOTTRIM
 NQA
 NTP
 NUT's
