@@ -1541,6 +1541,12 @@ public:
 		NOTIFY_NOTECO,
 		NOTIFY_ALARM,
 		NOTIFY_NOTALARM,
+		NOTIFY_OVER,
+		NOTIFY_NOTOVER,
+		NOTIFY_TRIM,
+		NOTIFY_NOTTRIM,
+		NOTIFY_BOOST,
+		NOTIFY_NOTBOOST,
 
 		NOTIFY_OTHER = 28,
 		NOTIFY_NOTOTHER,
