@@ -119,6 +119,7 @@ let upsmon_notify_type = "ONLINE"
 			| "NOCOMM"
 			| "NOPARENT"
 			| "CAL"
+			| "NOTCAL"
 			| "OFF"
 			| "NOTOFF"
 			| "BYPASS"
@@ -127,6 +128,12 @@ let upsmon_notify_type = "ONLINE"
 			| "NOTECO"
 			| "ALARM"
 			| "NOTALARM"
+			| "OVER"
+			| "NOTOVER"
+			| "TRIM"
+			| "NOTTRIM"
+			| "BOOST"
+			| "NOTBOOST"
 			| "OTHER"
 			| "NOTOTHER"
 			| "SUSPEND_STARTING"
